[gd_scene load_steps=22 format=3 uid="uid://c3kyrgvj4nyhf"]

[ext_resource type="Script" path="res://scenes/game_object/bat_enemy/bat_enemy.gd" id="1_p7ayo"]
[ext_resource type="PackedScene" uid="uid://dty6qc15obu6g" path="res://scenes/component/health_component.tscn" id="2_g6f2w"]
[ext_resource type="PackedScene" uid="uid://7bg2nfxngekx" path="res://scenes/component/velocity_component.tscn" id="3_cccn4"]
[ext_resource type="PackedScene" uid="uid://by5id6qbwx6ol" path="res://scenes/component/vial_drop_component.tscn" id="4_kjwlx"]
[ext_resource type="PackedScene" uid="uid://c51701536hr8h" path="res://scenes/component/hit_flash_component.tscn" id="5_i8vag"]
[ext_resource type="Shader" path="res://scenes/component/hit_flash_component.gdshader" id="6_gyf3d"]
[ext_resource type="PackedScene" uid="uid://den4ovx5roo6h" path="res://scenes/component/death_component.tscn" id="7_5n0xj"]
[ext_resource type="PackedScene" uid="uid://bsmhivc0yb4we" path="res://scenes/component/random_stream_player_2d_component.tscn" id="8_iv1rv"]
[ext_resource type="AudioStream" uid="uid://bnd8wba5fw2mh" path="res://assets/audio/footstep_carpet_000.ogg" id="9_dywjo"]
[ext_resource type="AudioStream" uid="uid://d2ndylrv851f1" path="res://assets/audio/footstep_carpet_001.ogg" id="10_xumho"]
[ext_resource type="AudioStream" uid="uid://bq67kt23800m5" path="res://assets/audio/footstep_carpet_002.ogg" id="11_gapwk"]
[ext_resource type="AudioStream" uid="uid://dr3iqrfbfdtno" path="res://assets/audio/footstep_carpet_003.ogg" id="12_dey0h"]
[ext_resource type="AudioStream" uid="uid://djdgcj3y23uaw" path="res://assets/audio/footstep_carpet_004.ogg" id="13_8kmbu"]
[ext_resource type="PackedScene" uid="uid://bfpb5wcinlqg4" path="res://scenes/component/hurtbox_component.tscn" id="14_fl4tb"]
[ext_resource type="Texture2D" uid="uid://cuglusnqt00cc" path="res://scenes/game_object/bat_enemy/bat_enemy.png" id="14_r27q8"]

[sub_resource type="Animation" id="Animation_5ys6g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -7)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_6tm8u"]
resource_name = "walk"
length = 0.4
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(2.46229, 1),
"update": 0,
"values": [Vector2(0, -7), Vector2(0, -11)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.174533, 0.0, -0.174533]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pijex"]
_data = {
"RESET": SubResource("Animation_5ys6g"),
"walk": SubResource("Animation_6tm8u")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_paqe2"]
resource_local_to_scene = true
shader = ExtResource("6_gyf3d")
shader_parameter/lerp_percent = null

[sub_resource type="CircleShape2D" id="CircleShape2D_p1asr"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_bpk6k"]
radius = 4.0

[node name="BatEnemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 9
script = ExtResource("1_p7ayo")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pijex")
}
autoplay = "walk"

[node name="HealthComponent" parent="." instance=ExtResource("2_g6f2w")]
max_health = 30.0

[node name="VelocityComponent" parent="." instance=ExtResource("3_cccn4")]
max_speed = 110
acceleration = 0.9

[node name="VialDropComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_kjwlx")]
drop_percent = 0.4
health_component = NodePath("../HealthComponent")

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("5_i8vag")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Sprite2D")
hit_flash_material = SubResource("ShaderMaterial_paqe2")

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("7_5n0xj")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Sprite2D")

[node name="HitRandomAudioPlayerComponent" parent="." instance=ExtResource("8_iv1rv")]
streams = Array[AudioStream]([ExtResource("9_dywjo"), ExtResource("10_xumho"), ExtResource("11_gapwk"), ExtResource("12_dey0h"), ExtResource("13_8kmbu")])

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("14_fl4tb")]
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_p1asr")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -7)
texture = ExtResource("14_r27q8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_bpk6k")
